--- a/app/src/main/res/layout/frg_main_login.xml
+++ b/app/src/main/res/layout/frg_main_login.xml
@@ -112,7 +112,7 @@
         app:layout_constraintTop_toBottomOf="@+id/txtInputPassword" />
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/btnGuardar"
+        android:id="@+id/btnIniciarSesion"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_marginHorizontal="16dp"
@@ -139,7 +139,7 @@
         app:cornerRadius="15sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnGuardar"
+        app:layout_constraintTop_toBottomOf="@+id/btnIniciarSesion"
         app:strokeColor="@color/c2"
         app:strokeWidth="2dp" />
 
