--- a/app/src/main/res/navigation/nav_host_login.xml
+++ b/app/src/main/res/navigation/nav_host_login.xml
@@ -12,6 +12,9 @@
         <action
             android:id="@+id/to_frg_register"
             app:destination="@id/frg_register" />
+        <action
+            android:id="@+id/to_frgDashboard"
+            app:destination="@id/frgDashboard" />
     </fragment>
 
     <fragment
@@ -25,4 +28,9 @@
             app:popUpToInclusive="true"
             app:destination="@id/frgMainLogin" />
     </fragment>
+    <fragment
+        android:id="@+id/frgDashboard"
+        android:name="com.example.auditoriaretail.Dashboard.presentation.ui.FrgDashboard"
+        android:label="frg_dashboard"
+        tools:layout="@layout/frg_dashboard" />
 </navigation>
