--- a/app/src/main/res/layout/frg_register.xml
+++ b/app/src/main/res/layout/frg_register.xml
@@ -40,7 +40,7 @@
 
     </LinearLayout>
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/EmailUsuario"
+        android:id="@+id/txtInputEmail"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -79,7 +79,7 @@
         app:hintTextColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/EmailUsuario">
+        app:layout_constraintTop_toBottomOf="@+id/txtInputEmail">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/inputNombre"
@@ -142,7 +142,7 @@
         android:text="Ingresa tu Nombre Completo"
         android:textColor="@color/white"
         android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/EmailUsuario"
+        app:layout_constraintBottom_toTopOf="@+id/txtInputEmail"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.108"
         app:layout_constraintStart_toStartOf="parent"
@@ -160,7 +160,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.099"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/EmailUsuario" />
+        app:layout_constraintTop_toBottomOf="@+id/txtInputEmail" />
 
     <TextView
         android:id="@+id/textView8"
